--- a/loop-lab-social-theme/css/style.css
+++ b/loop-lab-social-theme/css/style.css
@@ -1,9 +1,58 @@
 body{
-    background-color: #333;
+    background: #333;
     color: #fff;
 }
 
 .navbar{
 border-bottom: #1a98c7 3px solid;
 opacity: 0.8;
+}
+
+#home-section{
+    background: url('../../boiler-plate/image/looplab/home.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    min-height: 700px;
+
+}
+
+#home-section .dark-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+width: 100%;
+min-height: 700px;
+background: rgba(0, 0, 0, 0.7)
+
+}
+
+#home-section .home-inner{
+padding-top: 150px;
+}
+
+#home-section .card-form{
+opacity: 0.8;
+
+}
+#home-section .fas{
+    color: #63828d;
+    background: #fff;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#explore-section .fas , #share-section .fas{
+background: #333;
+color: #fff;
+padding: 5px;
+border-radius: 5px;
+
+}
+
+#create-section .fas{
+    padding: 5px;
+    border-radius: 5px;
+    color: #1a98c7;
+    background-color: #fff;
 }
