--- a/mizuxe/css/style.css
+++ b/mizuxe/css/style.css
@@ -9,4 +9,45 @@ body {
     font-size: 1.4rem;
     padding-right: 1.4rem; }
 
+#showcase {
+  position: relative;
+  background: url("../image/mizuxe/mountains.jpg");
+  min-height: 600px; }
+  #showcase .primary-overlay {
+    background: rgba(50, 146, 166, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid; }
+
+#authors img {
+  width: 100px;
+  margin-top: -70px; }
+#authors .card:hover {
+  background-color: #3292a6;
+  color: #fff; }
+#authors a i {
+  margin: auto 10px;
+  color: #fff; }
+
+@media (max-width: 768px) {
+  #showcase {
+    min-height: 500px; }
+    #showcase h1 {
+      font-size: 3rem; }
+
+  .mb-resp {
+    margin-bottom: 1rem; } }
+@media (max-width: 992px) {
+  .navbar {
+    padding: 1rem !important; }
+    .navbar a {
+      font-size: 1rem; } }
+
 /*# sourceMappingURL=style.css.map */
