--- a/mizuxe/scss/style.scss
+++ b/mizuxe/scss/style.scss
@@ -1,5 +1,5 @@
 $primary : #3292a6;
-$primary-overlay:rbga(50,146,166,0.8);
+$primary-overlay:rgba(50,146,166,0.8);
 
 body{
     margin-top: 105px;
@@ -14,3 +14,70 @@ body{
         padding-right: 1.4rem;
     }
 }
+
+#showcase{
+    position: relative;
+    background: url('../image/mizuxe/mountains.jpg');
+    min-height: 600px;
+
+    .primary-overlay{
+        background: $primary-overlay;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.info-header{
+    width: 50%;
+    margin: auto;
+    border-bottom:1px #ddd solid ;
+}
+
+#authors{
+
+    img{
+
+        width: 100px;
+        margin-top: -70px;
+    }
+
+        .card:hover{
+        background-color:#3292a6;
+        color:#fff    ;
+        }
+
+        a{
+            i{
+                margin: auto 10px;
+                color: #fff;
+            }
+        }
+}
+
+@media(max-width:768px){
+
+
+   #showcase{
+        min-height: 500px;
+        h1{
+            font-size: 3rem;
+        }
+    }
+    .mb-resp{
+        margin-bottom: 1rem;
+    }
+}
+
+@media(max-width:992px){
+    .navbar{
+    padding: 1rem !important;
+            a{
+                font-size:1rem;
+
+            }
+}
+}
+ 
