--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -28,3 +28,41 @@
     background-size: cover;
 
 }
+
+#home-section{
+    position: relative;
+    min-height: 200px;
+    background: url('../../boiler-plate/image/glozzom/lights.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+    text-align: center;
+  color: #fff;
+}
+
+.dark-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+#video-play{
+    position: relative;
+    color: #fff;
+    min-height: 200px;
+    background: url('../../boiler-plate/image/glozzom/media.jpg');
+      background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: 0 -300px;
+  text-align: center;
+
+
+}
+
+#video-play i{
+    color: #fff;
+    padding-bottom: 10px;
+}
+
